--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "highlight.js": "^11.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
+    "rehype-highlight": "^7.0.1",
+    "remark-gfm": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
