--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-type-animation": "^3.2.0",
     "rehype-highlight": "^7.0.1",
     "remark-gfm": "^4.0.0",
